Fixing styling and prompts not showing up

--- a/static/main.css
+++ b/static/main.css
@@ -92,3 +92,8 @@ textarea {
 .centerbutton {
     text-align: center;
 }
+
+#imghomepage {
+    text-align: center;
+    padding-top: 10px;
+}
